--- a/python_challenges.ipynb
+++ b/python_challenges.ipynb
@@ -622,6 +622,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solve_n_queens(n):\n",
+    "    def is_safe(board, row, col):\n",
+    "        for i in range(row):\n",
+    "            if board[i] == col or abs(board[i] - col) == abs(i - row):\n",
+    "                return False\n",
+    "        return True\n",
+    "\n",
+    "    def backtrack(row):\n",
+    "        if row == n:\n",
+    "            solutions.append(board[:])\n",
+    "            return\n",
+    "        for col in range(n):\n",
+    "            if is_safe(board, row, col):\n",
+    "                board[row] = col\n",
+    "                backtrack(row + 1)\n",
+    "                board[row] = -1\n",
+    "\n",
+    "    solutions = []\n",
+    "    board = [-1] * n\n",
+    "    backtrack(0)\n",
+    "    return solutions"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
