--- a/LeetCode_75.ipynb
+++ b/LeetCode_75.ipynb
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,25 +262,64 @@
     "    def reverseChar(self,S):\n",
     "        n = len(S)\n",
     "        reverse = []\n",
-    "        char = S.isalpha()\n",
-    "        while char:\n",
-    "            for i in range(-1,-n,-1):\n",
-    "                reverse.append(S[i])\n",
+    "        for i in range(-1,-n,-1):\n",
+    "            reverse.append(S[i])\n",
     "        return \"\".join(reverse)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'!hk=kjh-fed-cb'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mySolution().reverseChar(S=\"abc-def-hjk=kh!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "class mySolution:\n",
+    "    def reverseChar(self, S):\n",
+    "        # Extract all letters using regex\n",
+    "        letters = re.findall('[a-zA-Z]', S)\n",
+    "        \n",
+    "        # Reverse the list of letters\n",
+    "        letters.reverse()\n",
+    "        \n",
+    "        # Reconstruct the string\n",
+    "        result = []\n",
+    "        letter_index = 0\n",
+    "        for char in S:\n",
+    "            if char.isalpha():\n",
+    "                result.append(letters[letter_index])\n",
+    "                letter_index += 1\n",
+    "            else:\n",
+    "                result.append(char)\n",
+    "        \n",
+    "        # Convert the list to a string\n",
+    "        return ''.join(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,29 +339,47 @@
     "            letter_index += 1\n",
     "        else:\n",
     "            result.append(char)\n",
-    "    \n",
     "    # Convert the list to a string\n",
     "    return ''.join(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'hkk-jhf-edc=ba!'"
+       "'hk2k-jhf-4edc=ba!'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "reverse_only_letters(S=\"abc-def-hjk=kh!\")"
+    "reverse_only_letters(S=\"ab2c-def-4hjk=kh!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Real Algorithm code challenge**\n",
+    "- *Given a binary tree, find its maximum depth.*\n",
+    "- *The maximum depth is the number of nodes along the longest path from the root node down to the farthest leaf node.*\n",
+    "- ```Node```: *A leaf node is a node with no children.*\n",
+    "- *Example: Given binary tree [3,9,20,null,null,15,7]*\n",
+    "```python\n",
+    "3\n",
+    "/\\ \n",
+    "9 20\n",
+    " / \\\n",
+    "15  7\n",
+    "Return its depth = 3\n",
+    "```"
    ]
   },
   {
@@ -330,7 +387,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class TreeNode:\n",
+    "    def __init__(self, val=0, left=None, right=None):\n",
+    "        self.val = val\n",
+    "        self.left = left\n",
+    "        self.right = right\n",
+    "\n",
+    "def maxDepth(root):\n",
+    "    # Base case: if the tree is empty, depth is 0\n",
+    "    if not root:\n",
+    "        return 0\n",
+    "    \n",
+    "    # Recursively compute the depth of the left and right subtrees\n",
+    "    left_depth = maxDepth(root.left)\n",
+    "    right_depth = maxDepth(root.right)\n",
+    "    \n",
+    "    # The depth of the tree is 1 (for the root) plus the maximum of the left and right depths\n",
+    "    return 1 + max(left_depth, right_depth)"
+   ]
   }
  ],
  "metadata": {
