--- a/LeetCode_75.ipynb
+++ b/LeetCode_75.ipynb
@@ -406,6 +406,16 @@
     "    # The depth of the tree is 1 (for the root) plus the maximum of the left and right depths\n",
     "    return 1 + max(left_depth, right_depth)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given a string S, return the reverse string where all characters that are not a letter stay in the same place, and all letters reverse their positions.\n",
+    "Example:\n",
+    "1. Input: \"ab-cd\" Output: \"dc-ba\"\n",
+    "2. Input: \"a-bC-dEf=ghIj!!\" Output: \"j-Ih-gfE=dCba!!\n"
+   ]
   }
  ],
  "metadata": {
