--- a/LeetCode_75.ipynb
+++ b/LeetCode_75.ipynb
@@ -416,6 +416,22 @@
     "1. Input: \"ab-cd\" Output: \"dc-ba\"\n",
     "2. Input: \"a-bC-dEf=ghIj!!\" Output: \"j-Ih-gfE=dCba!!\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given a binary tree, find its maximum depth.\n",
+    "The maximum depth is the number of nodes along the longest path from the root node down to the farthest leaf node.\n",
+    "Node: A leaf node is a node with no children."
+   ]
   }
  ],
  "metadata": {
