--- a/LeetCode_75.ipynb
+++ b/LeetCode_75.ipynb
@@ -430,7 +430,14 @@
    "source": [
     "Given a binary tree, find its maximum depth.\n",
     "The maximum depth is the number of nodes along the longest path from the root node down to the farthest leaf node.\n",
-    "Node: A leaf node is a node with no children."
+    "Node: A leaf node is a node with no children.\n",
+    "Example: Given binary tree [3,9,20,null,null,15,7]\n",
+    "3\n",
+    "/\\ \n",
+    "9 20\n",
+    " / \\\n",
+    "15  7\n",
+    "Return its depth = 3"
    ]
   }
  ],
