--- a/LeetCode_75.ipynb
+++ b/LeetCode_75.ipynb
@@ -439,6 +439,31 @@
     "15  7\n",
     "Return its depth = 3"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TreeNode:\n",
+    "    def __init__(self, val=0, left=None, right=None):\n",
+    "        self.val = val\n",
+    "        self.left = left\n",
+    "        self.right = right\n",
+    "\n",
+    "def maxDepth(root):\n",
+    "    # Base case: if the tree is empty, depth is 0\n",
+    "    if not root:\n",
+    "        return 0\n",
+    "    \n",
+    "    # Recursively compute the depth of the left and right subtrees\n",
+    "    left_depth = maxDepth(root.left)\n",
+    "    right_depth = maxDepth(root.right)\n",
+    "    \n",
+    "    # The depth of the tree is 1 (for the root) plus the maximum of the left and right depths\n",
+    "    return 1 + max(left_depth, right_depth)"
+   ]
   }
  ],
  "metadata": {
