--- a/LeetCode_75.ipynb
+++ b/LeetCode_75.ipynb
@@ -541,6 +541,19 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "A peak element is an element that is strictly greater than its neighbors.\n",
+    "\n",
+    "Given a 0-indexed integer array nums, find a peak element, and return its index. If the array contains multiple peaks, return the index to any of the peaks.\n",
+    "\n",
+    "You may imagine that nums[-1] = nums[n] = -∞. In other words, an element is always considered to be strictly greater than a neighbor that is outside the array.\n",
+    "\n",
+    "You must write an algorithm that runs in O(log n) time."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
