--- a/LeetCode_75.ipynb
+++ b/LeetCode_75.ipynb
@@ -581,6 +581,38 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given an array of characters chars, compress it using the following algorithm:\n",
+    "\n",
+    "Begin with an empty string s. For each group of consecutive repeating characters in chars:\n",
+    "\n",
+    "If the group's length is 1, append the character to s.\n",
+    "Otherwise, append the character followed by the group's length.\n",
+    "The compressed string s should not be returned separately, but instead, be stored in the input character array chars. Note that group lengths that are 10 or longer will be split into multiple characters in chars.\n",
+    "\n",
+    "After you are done modifying the input array, return the new length of the array.\n",
+    "\n",
+    "You must write an algorithm that uses only constant extra space.\n",
+    "\n",
+    " \n",
+    "\n",
+    "Example 1:\n",
+    "\n",
+    "Input: chars = [\"a\",\"a\",\"b\",\"b\",\"c\",\"c\",\"c\"]\n",
+    "Output: Return 6, and the first 6 characters of the input array should be: [\"a\",\"2\",\"b\",\"2\",\"c\",\"3\"]\n",
+    "Explanation: The groups are \"aa\", \"bb\", and \"ccc\". This compresses to \"a2b2c3\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
