--- a/LeetCode_75.ipynb
+++ b/LeetCode_75.ipynb
@@ -613,6 +613,15 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given an integer array nums, move all 0's to the end of it while maintaining the relative order of the non-zero elements.\n",
+    "\n",
+    "Note that you must do this in-place without making a copy of the array."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
