--- a/LeetCode_75.ipynb
+++ b/LeetCode_75.ipynb
@@ -623,38 +623,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def moveAllZero(nums):\n",
+    "    n = len(nums)\n",
+    "    Num = []\n",
+    "    zeroN = []\n",
+    "    for i in range(0,n):\n",
+    "        if nums[i]!=0:\n",
+    "            Num.append(nums[i])\n",
+    "        if nums[i]==0:\n",
+    "            zeroN.append(nums[i])\n",
+    "            i += 1\n",
+    "    moNum = Num + zeroN\n",
+    "    return moNum\n",
+    "        "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 12, 0, 0]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "moveAllZero(nums = [0,1,0,3,12])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution(object):\n",
+    "    def moveZeroes(self, nums):\n",
+    "        \"\"\"\n",
+    "        :type nums: List[int]\n",
+    "        :rtype: None Do not return anything, modify nums in-place instead.\n",
+    "        \"\"\"\n",
+    "        n = len(nums)\n",
+    "        NonZero = []\n",
+    "        ZeroNum = []\n",
+    "        for i in range(0,n):\n",
+    "            if nums[i] != 0:\n",
+    "                NonZero.append(nums[i])\n",
+    "            if nums[i] == 0:\n",
+    "                ZeroNum.append(nums[i])\n",
+    "                i += 1\n",
+    "            moveZero = NonZero + ZeroNum\n",
+    "        return moveZero"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 12, 0, 0]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Solution().moveZeroes(nums= [0,1,0,3,12])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 12, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Solution(object):\n",
+    "    def moveZeroes(self, nums):\n",
+    "        \"\"\"\n",
+    "        :type nums: List[int]\n",
+    "        :rtype: None. Modify nums in-place.\n",
+    "        \"\"\"\n",
+    "        non_zero_index = 0  # Pointer for non-zero elements\n",
+    "\n",
+    "        # Move non-zero elements forward\n",
+    "        for i in range(len(nums)):\n",
+    "            if nums[i] != 0:\n",
+    "                nums[non_zero_index], nums[i] = nums[i], nums[non_zero_index]\n",
+    "                non_zero_index += 1\n",
+    "\n",
+    "# Example usage:\n",
+    "nums = [0, 1, 0, 3, 12]\n",
+    "sol = Solution()\n",
+    "sol.moveZeroes(nums)\n",
+    "print(nums)  # Output: [1, 3, 12, 0, 0]\n"
+   ]
   },
   {
    "cell_type": "code",
