--- a/LeetCode_75.ipynb
+++ b/LeetCode_75.ipynb
@@ -178,6 +178,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class mySol():\n",
+    "    def tripleIndices(self,nums):\n",
+    "        n = len(nums)\n",
+    "        idxNum = 0\n",
+    "        for i in range(n):\n",
+    "            if ((nums[idxNum] < nums[i-1]) and (nums[i-1]<nums[i])):\n",
+    "                print(True)\n",
+    "                idxNum += 1\n",
+    "\n",
+    "            else:\n",
+    "                False\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "mySol().tripleIndices(nums=[1,2,3,4,5])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "vscode": {
