--- a/Python_MCQ.ipynb
+++ b/Python_MCQ.ipynb
@@ -120,6 +120,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. **What will be the output of this code?**\n",
+    "```python\n",
+    "a = (1, 2, 3)\n",
+    "b = a\n",
+    "a += (4, 5)\n",
+    "print(a)\n",
+    "print(b)\n",
+    "```\n",
+    "- A) (1, 2, 3, 4, 5), (1, 2, 3, 4, 5)\n",
+    "- B) (1, 2, 3, 4, 5), (1, 2, 3)\n",
+    "- C) (1, 2, 3), (1, 2, 3, 4, 5)\n",
+    "- D) (1, 2, 3), (1, 2, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4, 5)\n",
+      "(1, 2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = (1, 2, 3)\n",
+    "b = a\n",
+    "a += (4, 5)\n",
+    "print(a)\n",
+    "print(b)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
