--- a/Python_MCQ.ipynb
+++ b/Python_MCQ.ipynb
@@ -162,7 +162,106 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "4. **What will be the output of the following code?**\n",
+    "```python\n",
+    "def func():\n",
+    "    for i in range(3):\n",
+    "        yield i\n",
+    "\n",
+    "g = func()\n",
+    "print(next(g))\n",
+    "print(next(g))\n",
+    "g.close()\n",
+    "print(next(g))\n",
+    "```\n",
+    "- A) 0 1 2\n",
+    "- B) 0 1 StopIteration\n",
+    "- C) 0 1 RuntimeError\n",
+    "- D) 0 1 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n"
+     ]
+    },
+    {
+     "ename": "StopIteration",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 9\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mnext\u001b[39m(g))\n\u001b[0;32m      8\u001b[0m g\u001b[38;5;241m.\u001b[39mclose()\n\u001b[1;32m----> 9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28;43mnext\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mg\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "\u001b[1;31mStopIteration\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "def func():\n",
+    "    for i in range(3):\n",
+    "        yield i\n",
+    "\n",
+    "g = func()\n",
+    "print(next(g))\n",
+    "print(next(g))\n",
+    "g.close()\n",
+    "print(next(g))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. **What will be the output of this code?**\n",
+    "```python\n",
+    "def add_to_list(value, lst=[]):\n",
+    "    lst.append(value)\n",
+    "    return lst\n",
+    "\n",
+    "print(add_to_list(1))\n",
+    "print(add_to_list(2, []))\n",
+    "print(add_to_list(3))\n",
+    "```\n",
+    "A) [1], [2], [3]\n",
+    "B) [1], [2], [1, 3]\n",
+    "C) [1], [2], [3]\n",
+    "D) [1], [2], [1, 3]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n",
+      "[2]\n",
+      "[1, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add_to_list(value, lst=[]):\n",
+    "    lst.append(value)\n",
+    "    return lst\n",
+    "\n",
+    "print(add_to_list(1))\n",
+    "print(add_to_list(2, []))\n",
+    "print(add_to_list(3))\n"
+   ]
   },
   {
    "cell_type": "code",
