--- a/Python_MCQ.ipynb
+++ b/Python_MCQ.ipynb
@@ -232,10 +232,10 @@
     "print(add_to_list(2, []))\n",
     "print(add_to_list(3))\n",
     "```\n",
-    "A) [1], [2], [3]\n",
-    "B) [1], [2], [1, 3]\n",
-    "C) [1], [2], [3]\n",
-    "D) [1], [2], [1, 3]\n"
+    "- A) [1], [2], [3]\n",
+    "- B) [1], [2], [1, 3]\n",
+    "- C) [1], [2], [3]\n",
+    "- D) [1], [2], [1, 3]\n"
    ]
   },
   {
@@ -261,6 +261,43 @@
     "print(add_to_list(1))\n",
     "print(add_to_list(2, []))\n",
     "print(add_to_list(3))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class books:\n",
+    "    def __init__ (self, author,title):\n",
+    "        self.author = author\n",
+    "        self.title = title\n",
+    "\n",
+    "class journas:\n",
+    "    def __init__ (self):\n",
+    "        super().__init__()\n",
+    "        self.info = self.author\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.books at 0x196fa3f2d50>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "books('mamo','Mathematics')"
    ]
   },
   {
