--- a/Python_MCQ.ipynb
+++ b/Python_MCQ.ipynb
@@ -282,22 +282,226 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "books('mamo','Mathematics')\n",
+    "p = books()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<__main__.books at 0x196fa3f2d50>"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x: Orange\n",
+      "y: Banana\n",
+      "z: Cherry\n"
+     ]
     }
    ],
    "source": [
-    "books('mamo','Mathematics')"
+    "x, y, z = \"Orange\", \"Banana\", \"Cherry\"\n",
+    "print('x:',x)\n",
+    "print('y:', y)\n",
+    "print('z:', z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x: apple\n",
+      "y: banana\n",
+      "z: cherry\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
+    "x, y, z = fruits\n",
+    "print('x:',x)\n",
+    "print('y:', y)\n",
+    "print('z:', z)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python is So cool\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Global and local variables\n",
+    "#x = 'Amazing'\n",
+    "def myFunc():\n",
+    "    global x\n",
+    "    x = 'So cool'\n",
+    "    #print('Python is',x)\n",
+    "myFunc()\n",
+    "print('Python is',x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myFunc()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World me\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Hello','World', 'me')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "835\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(random.randrange(1, 1000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{True, 2, 'banana', 'cherry', 'apple'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "thisset = {\"apple\", \"banana\", \"cherry\", True, 1, 2}\n",
+    "\n",
+    "print(thisset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The-rain-in-Spain\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "txt = \"The rain in Spain\"\n",
+    "x = re.sub(\"\\s\", \"-\", txt)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['The', 'rain', 'in', 'Spain']\n"
+     ]
+    }
+   ],
+   "source": [
+    "txt = \"The rain in Spain\"\n",
+    "x = re.split(\"\\s\", txt)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The9rain9in Spain\n"
+     ]
+    }
+   ],
+   "source": [
+    "txt = \"The rain in Spain\"\n",
+    "x = re.sub(\"\\s\", \"9\", txt, 2)\n",
+    "print(x)"
    ]
   },
   {
